# otp-authenticator

./: Cargo.toml  README.md  build.sh
src/: main.rs  main_test.rs  otp.rs
