[package]
name = "otp-authenticator"
version = "0.1.0"
edition = "2021"
authors = ["Rwabahizi Jonathan <jonathanrwabahizi@gmail.com>"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
env_logger = "0.10.0"
dotenv = "0.15.0"
serde = { version = "1.0.157", features = ["derive"] }
rand = "0.8.5"
base32 = "0.4.0"
hmac = "0.12.1"
sha1 = "0.10.5"
sha2 = "0.10.6"
